@@ -197,6 +197,8 @@ struct nickserv_config {
     const char *ldap_field_password;
     const char *ldap_field_email;
     struct string_list *ldap_object_classes;
+    const char *ldap_oper_group_dn;
+    const char *ldap_field_group_member;
 #endif
 };
 
