@@ -30,6 +30,9 @@ int ldap_rename_account(char *oldaccount, char *newaccount);
 int ldap_delete_account(char *account);
 int ldap_do_modify(const char *account, const char *password, const char *email);
 int ldap_get_user_info(char *account, char **email);
+int ldap_delfromgroup(char *account, const char *group);
+int ldap_add2group(char *account, const char *group);
+
 
 void ldap_close();
 
