@@ -242,9 +242,13 @@
         //      can be found in the tools/ directory. ldap servers wont
         //      know what that is by default.
         // These configure what I store, and where.
-        //"ldap_add_account" "uid";
-        //"ldap_add_password "userPassword";
-        //"ldap_add_email" "";
+        //"ldap_field_account" "uid";
+        //"ldap_field_password "userPassword";
+        //"ldap_field_email" "mail";
+        //
+        // This bit is needed if you want to put ircops into a group:
+        //"ldap_oper_group_dn" "cn=Opers,ou=Groups,dc=afternet,dc=org";
+        //"ldap_field_group_member" "memberUid";
     };
 
     /* 
